# SIMS-Lite-Backend

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260723_1814_831a1c579f9d_phase1_auth_user_management.py  20260723_1920_86e34ca838b4_phase2_master_data_management.py  20260723_2100_phase3_procurement.py  20260723_2200_phase4_inventory.py  20260723_2300_phase5_stock_release.py  20260724_0000_phase6a_notifications.py  README.md
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: config.py  deps.py  exceptions.py  logging.py  redis.py  security.py  seeder.py
app/database/: __init__.py  base.py  engine.py  health.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  audit_log.py  inventory.py  master_data.py  notification.py  procurement.py  stock_release.py  user.py
app/repositories/: __init__.py  audit_log.py  base.py  inventory.py  master_data.py  notification.py  procurement.py  stock_release.py  user.py
app/schemas/: __init__.py  auth.py  base.py  inventory.py  master_data.py  notification.py  procurement.py  stock_release.py  user.py
app/services/: __init__.py  auth.py  (+12 more)
docs/: architecture.md  authentication.md  development-guide.md  grn-workflow.md  inventory-issue-workflow.md  inventory-ledger.md  inventory.md  master-data.md  notifications.md  procurement.md  product-management.md  purchase-order-workflow.md  rbac.md  real-time-events.md  security.md  setup-guide.md  stock-adjustments.md  stock-release.md  websocket.md
scripts/: init-db.sql  start.sh
tests/: __init__.py  conftest.py
(+55 files in other folders)
